--- a/public/css/table.css
+++ b/public/css/table.css
@@ -28,7 +28,8 @@ table.dataTable.display tbody tr:hover {
 /*Pagination Buttons - Current selected */
 .dataTables_wrapper .dataTables_paginate .paginate_button.current {
   color: #fff !important; /*text-white*/
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06); /*shadow*/
+  box-shadow: 0 1px 3px 0 rgba(255, 255, 255, 0.1),
+    0 1px 2px 0 rgba(0, 0, 0, 0.06); /*shadow*/
   font-weight: 700; /*font-bold*/
   border-radius: 0.25rem; /*rounded*/
   background: #667eea !important; /*bg-indigo-500*/
