--- a/views/calon/form.ejs
+++ b/views/calon/form.ejs
@@ -59,7 +59,7 @@
             <div class="w-full mb-2">
                 <div class="flex items-center">
                     <i class="ml-3 fill-current text-gray-400 text-xs z-10 fas fa-phone"></i>
-                    <input id="no_hp" type='text' placeholder="No Handphone" name="no_hp" value="" class="-mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none" />
+                    <input id="noHp" type='text' placeholder="No Handphone" name="noHp" value="" class="-mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none" />
                 </div>
             </div>
     </form>
