--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,15 +5,15 @@
         <div class="flex flex-row items-center">
           <div class="flex-shrink pr-4">
             <div class="rounded p-3 bg-green-600">
-              <i class="fa fa-wallet fa-2x fa-fw fa-inverse"></i>
+              <i class="fas fa-users fa-2x fa-fw fa-inverse"></i>
             </div>
           </div>
           <div class="flex-1 text-right md:text-center">
-            <h5 class="font-bold uppercase text-gray-400">Total Revenue</h5>
+            <h5 class="font-bold uppercase text-gray-400">Total Calon</h5>
             <h3 class="font-bold text-3xl text-gray-600">
-              $3249
-              <span class="text-green-500"
-                ><i class="fas fa-caret-up"></i
+              <%= calons.length%> Calon
+              <span class="text-green-500">
+                <i class="fas fa-exchange-alt"></i
               ></span>
             </h3>
           </div>
@@ -31,9 +31,9 @@
             </div>
           </div>
           <div class="flex-1 text-right md:text-center">
-            <h5 class="font-bold uppercase text-gray-400">Total Users</h5>
+            <h5 class="font-bold uppercase text-gray-400">Calon Belum Dinilai</h5>
             <h3 class="font-bold text-3xl text-gray-600">
-              249
+              <%= calonFalse%> Calon
               <span class="text-pink-500"
                 ><i class="fas fa-exchange-alt"></i
               ></span>
@@ -49,16 +49,16 @@
         <div class="flex flex-row items-center">
           <div class="flex-shrink pr-4">
             <div class="rounded p-3 bg-yellow-600">
-              <i class="fas fa-user-plus fa-2x fa-fw fa-inverse"></i>
+              <i class="fas fa-users fa-2x fa-fw fa-inverse"></i>
             </div>
           </div>
           <div class="flex-1 text-right md:text-center">
-            <h5 class="font-bold uppercase text-gray-400">New Users</h5>
+            <h5 class="font-bold uppercase text-gray-400">Rank A</h5>
             <h3 class="font-bold text-3xl text-gray-600">
-              2
-              <span class="text-yellow-600"
+              <%= rankA%> Calon
+              <!-- <span class="text-yellow-600"
                 ><i class="fas fa-caret-up"></i
-              ></span>
+              ></span> -->
             </h3>
           </div>
         </div>
@@ -71,12 +71,14 @@
         <div class="flex flex-row items-center">
           <div class="flex-shrink pr-4">
             <div class="rounded p-3 bg-blue-600">
-              <i class="fas fa-server fa-2x fa-fw fa-inverse"></i>
+              <i class="fas fa-users fa-2x fa-fw fa-inverse"></i>
             </div>
           </div>
           <div class="flex-1 text-right md:text-center">
-            <h5 class="font-bold uppercase text-gray-400">Server Uptime</h5>
-            <h3 class="font-bold text-3xl text-gray-600">152 days</h3>
+            <h5 class="font-bold uppercase text-gray-400">Rank B</h5>
+            <h3 class="font-bold text-3xl text-gray-600">
+              <%= rankB%> Calon
+            </h3>
           </div>
         </div>
       </div>
@@ -88,12 +90,14 @@
         <div class="flex flex-row items-center">
           <div class="flex-shrink pr-4">
             <div class="rounded p-3 bg-indigo-600">
-              <i class="fas fa-tasks fa-2x fa-fw fa-inverse"></i>
+              <i class="fas fa-users fa-2x fa-fw fa-inverse"></i>
             </div>
           </div>
           <div class="flex-1 text-right md:text-center">
-            <h5 class="font-bold uppercase text-gray-400">To Do List</h5>
-            <h3 class="font-bold text-3xl text-gray-600">7 tasks</h3>
+            <h5 class="font-bold uppercase text-gray-400">Rank C</h5>
+            <h3 class="font-bold text-3xl text-gray-600">
+              <%= rankC%> Calon
+            </h3>
           </div>
         </div>
       </div>
@@ -105,14 +109,14 @@
         <div class="flex flex-row items-center">
           <div class="flex-shrink pr-4">
             <div class="rounded p-3 bg-red-600">
-              <i class="fas fa-inbox fa-2x fa-fw fa-inverse"></i>
+              <i class="fas fa-users fa-2x fa-fw fa-inverse"></i>
             </div>
           </div>
           <div class="flex-1 text-right md:text-center">
-            <h5 class="font-bold uppercase text-gray-400">Issues</h5>
+            <h5 class="font-bold uppercase text-gray-400">Rank D</h5>
             <h3 class="font-bold text-3xl text-gray-600">
-              3
-              <span class="text-red-500"><i class="fas fa-caret-up"></i></span>
+              <%= rankD%> Calon
+              <!-- <span class="text-red-500"><i class="fas fa-caret-up"></i></span> -->
             </h3>
           </div>
         </div>
@@ -124,319 +128,120 @@
   <!--Divider-->
   <hr class="border-b-2 border-gray-600 my-8 mx-4" />
 
-  <div class="flex flex-row flex-wrap flex-grow mt-2">
-    <div class="w-full md:w-1/2 p-3">
-      <!--Graph Card-->
-      <div class="bg-gray-900 border border-gray-800 rounded shadow">
-        <div class="border-b border-gray-800 p-3">
-          <h5 class="font-bold uppercase text-gray-600">Graph</h5>
-        </div>
-        <div class="p-5">
-          <canvas
-            id="chartjs-7"
-            class="chartjs"
-            width="undefined"
-            height="undefined"
-          ></canvas>
-          <script>
-            new Chart(document.getElementById("chartjs-7"), {
-              type: "bar",
-              data: {
-                labels: ["January", "February", "March", "April"],
-                datasets: [
-                  {
-                    label: "Page Impressions",
-                    data: [10, 20, 30, 40],
-                    borderColor: "rgb(255, 99, 132)",
-                    backgroundColor: "rgba(255, 99, 132, 0.2)",
-                  },
-                  {
-                    label: "Adsense Clicks",
-                    data: [5, 15, 10, 30],
-                    type: "line",
-                    fill: false,
-                    borderColor: "rgb(54, 162, 235)",
-                  },
-                ],
-              },
-              options: {
-                scales: {
-                  yAxes: [
-                    {
-                      ticks: {
-                        beginAtZero: true,
-                      },
-                    },
-                  ],
-                },
-              },
-            });
-          </script>
-        </div>
-      </div>
-      <!--/Graph Card-->
-    </div>
+  <% if(calons.length) { %>
+    <!--Card-->
+<div
+id="recipients"
+class="p-8 mt-8 lg:mt-0 rounded shadow bg-gray-900 border border-gray-800 rounded-xl p-8"
+>
 
-    <div class="w-full md:w-1/2 p-3">
-      <!--Graph Card-->
-      <div class="bg-gray-900 border border-gray-800 rounded shadow">
-        <div class="border-b border-gray-800 p-3">
-          <h5 class="font-bold uppercase text-gray-600">Graph</h5>
-        </div>
-        <div class="p-5">
-          <canvas
-            id="chartjs-0"
-            class="chartjs"
-            width="undefined"
-            height="undefined"
-          ></canvas>
-          <script>
-            new Chart(document.getElementById("chartjs-0"), {
-              type: "line",
-              data: {
-                labels: [
-                  "January",
-                  "February",
-                  "March",
-                  "April",
-                  "May",
-                  "June",
-                  "July",
-                ],
-                datasets: [
-                  {
-                    label: "Views",
-                    data: [65, 59, 80, 81, 56, 55, 40],
-                    fill: false,
-                    borderColor: "rgb(75, 192, 192)",
-                    lineTension: 0.1,
-                  },
-                ],
-              },
-              options: {},
-            });
-          </script>
-        </div>
-      </div>
-      <!--/Graph Card-->
-    </div>
+<table
+  id="table"
+  class="stripe hover"
+  style="width: 100%; padding-top: 1em; padding-bottom: 1em"
+>
+  <thead>
+    <tr>
+      <th>No</th>
+      <th>Nama</th>
+      <th>Alamat</th>
+      <th>No Telepon</th>
+      <th>Nilai</th>
+      <th>RANK</th>
+      <th>Penyampaian Materi</th>
+      <th>Pemahaman Bahasa Pemrograman</th>
+      <th>Rasa Tanggung Jawab</th>
+      <th>Mengerti Tentang Jaringan</th>
+      <th>Pemahaman Tentang Metode</th>
+      <th>Pemahaman Tentang Sistem</th>
+      <th>Pemahaman Tentang Alat</th>
+      <th>Pemahaman Tentang Web</th>
+      <th>Pemahaman Bahasa Inggris</th>
+      <th>Kemampuan Berinteraksi</th>
+      <th>Pengalaman Mengajar</th>
+      <th>Kemampuan Berinteraksi</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% for(let i=0; i < calons.length ; i++) { const data = calons[i]%>
+    <tr>
+      <td><%= i+1 %></td>
+      <td><%= data.nama %></td>
+      <td><%= data.alamat %></td>
+      <td><%= data.noHp %></td>
+      <td><%= data.nilai %></td>
+      <td><%= data.rank %></td>
+      <td><%= data.materi %></td>
+      <td><%= data.pemrograman %></td>
+      <td><%= data.tanggungJawab %></td>
+      <td><%= data.jaringan %></td>
+      <td><%= data.metode %></td>
+      <td><%= data.sistem %></td>
+      <td><%= data.alat %></td>
+      <td><%= data.web %></td>
+      <td><%= data.bInggris %></td>
+      <td><%= data.berinteraksi %></td>
+      <td><%= data.mengajar %></td>
+      <td><%= data.presentrasi %></td>
+      <td><%= data.status%></td>
+      </td>
+    </tr>
+    <%}%>
+  </tbody>
+</table>
+<% } %>
+</div>
+<!--/Card-->
 
-    <div class="w-full md:w-1/2 xl:w-1/3 p-3">
-      <!--Graph Card-->
-      <div class="bg-gray-900 border border-gray-800 rounded shadow">
-        <div class="border-b border-gray-800 p-3">
-          <h5 class="font-bold uppercase text-gray-600">Graph</h5>
-        </div>
-        <div class="p-5">
-          <canvas
-            id="chartjs-1"
-            class="chartjs"
-            width="undefined"
-            height="undefined"
-          ></canvas>
-          <script>
-            new Chart(document.getElementById("chartjs-1"), {
-              type: "bar",
-              data: {
-                labels: [
-                  "January",
-                  "February",
-                  "March",
-                  "April",
-                  "May",
-                  "June",
-                  "July",
-                ],
-                datasets: [
-                  {
-                    label: "Likes",
-                    data: [65, 59, 80, 81, 56, 55, 40],
-                    fill: false,
-                    backgroundColor: [
-                      "rgba(255, 99, 132, 0.2)",
-                      "rgba(255, 159, 64, 0.2)",
-                      "rgba(255, 205, 86, 0.2)",
-                      "rgba(75, 192, 192, 0.2)",
-                      "rgba(54, 162, 235, 0.2)",
-                      "rgba(153, 102, 255, 0.2)",
-                      "rgba(201, 203, 207, 0.2)",
-                    ],
-                    borderColor: [
-                      "rgb(255, 99, 132)",
-                      "rgb(255, 159, 64)",
-                      "rgb(255, 205, 86)",
-                      "rgb(75, 192, 192)",
-                      "rgb(54, 162, 235)",
-                      "rgb(153, 102, 255)",
-                      "rgb(201, 203, 207)",
-                    ],
-                    borderWidth: 1,
-                  },
-                ],
-              },
-              options: {
-                scales: {
-                  yAxes: [
-                    {
-                      ticks: {
-                        beginAtZero: true,
-                      },
-                    },
-                  ],
-                },
-              },
-            });
-          </script>
-        </div>
-      </div>
-      <!--/Graph Card-->
-    </div>
 
-    <div class="w-full md:w-1/2 xl:w-1/3 p-3">
-      <!--Graph Card-->
-      <div class="bg-gray-900 border border-gray-800 rounded shadow">
-        <div class="border-b border-gray-800 p-3">
-          <h5 class="font-bold uppercase text-gray-600">Graph</h5>
-        </div>
-        <div class="p-5">
-          <canvas
-            id="chartjs-4"
-            class="chartjs"
-            width="undefined"
-            height="undefined"
-          ></canvas>
-          <script>
-            new Chart(document.getElementById("chartjs-4"), {
-              type: "doughnut",
-              data: {
-                labels: ["P1", "P2", "P3"],
-                datasets: [
-                  {
-                    label: "Issues",
-                    data: [300, 50, 100],
-                    backgroundColor: [
-                      "rgb(255, 99, 132)",
-                      "rgb(54, 162, 235)",
-                      "rgb(255, 205, 86)",
-                    ],
-                  },
-                ],
-              },
-            });
-          </script>
-        </div>
-      </div>
-      <!--/Graph Card-->
-    </div>
-
-    <div class="w-full md:w-1/2 xl:w-1/3 p-3">
-      <!--Template Card-->
-      <div class="bg-gray-900 border border-gray-800 rounded shadow">
-        <div class="border-b border-gray-800 p-3">
-          <h5 class="font-bold uppercase text-gray-600">Template</h5>
-        </div>
-        <div class="p-5"></div>
-      </div>
-      <!--/Template Card-->
-    </div>
-
-    <div class="w-full p-3">
-      <!--Table Card-->
-      <div class="bg-gray-900 border border-gray-800 rounded shadow">
-        <div class="border-b border-gray-800 p-3">
-          <h5 class="font-bold uppercase text-gray-600">Table</h5>
-        </div>
-        <div class="p-5">
-          <table class="w-full p-5 text-gray-700">
-            <thead>
-              <tr>
-                <th class="text-left text-gray-600">Name</th>
-                <th class="text-left text-gray-600">Side</th>
-                <th class="text-left text-gray-600">Role</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <tr>
-                <td>Obi Wan Kenobi</td>
-                <td>Light</td>
-                <td>Jedi</td>
-              </tr>
-              <tr>
-                <td>Greedo</td>
-                <td>South</td>
-                <td>Scumbag</td>
-              </tr>
-              <tr>
-                <td>Darth Vader</td>
-                <td>Dark</td>
-                <td>Sith</td>
-              </tr>
-            </tbody>
-          </table>
-
-          <p class="py-2">
-            <a href="#" class="text-white">See More issues...</a>
-          </p>
-        </div>
-      </div>
-      <!--/table Card-->
-    </div>
   </div>
 
-  <script>
-    var userMenuDiv = document.getElementById("userMenu");
-    var userMenu = document.getElementById("userButton");
-
-    var navMenuDiv = document.getElementById("nav-content");
-    var navMenu = document.getElementById("nav-toggle");
-
-    document.onclick = check;
-
-    function check(e) {
-      var target = (e && e.target) || (event && event.srcElement);
-
-      //User Menu
-      if (!checkParent(target, userMenuDiv)) {
-        // click NOT on the menu
-        if (checkParent(target, userMenu)) {
-          // click on the link
-          if (userMenuDiv.classList.contains("invisible")) {
-            userMenuDiv.classList.remove("invisible");
-          } else {
-            userMenuDiv.classList.add("invisible");
-          }
-        } else {
-          // click both outside link and outside menu, hide menu
-          userMenuDiv.classList.add("invisible");
-        }
-      }
-
-      //Nav Menu
-      if (!checkParent(target, navMenuDiv)) {
-        // click NOT on the menu
-        if (checkParent(target, navMenu)) {
-          // click on the link
-          if (navMenuDiv.classList.contains("hidden")) {
-            navMenuDiv.classList.remove("hidden");
-          } else {
-            navMenuDiv.classList.add("hidden");
-          }
-        } else {
-          // click both outside link and outside menu, hide menu
-          navMenuDiv.classList.add("hidden");
-        }
-      }
-    }
-
-    function checkParent(t, elm) {
-      while (t.parentNode) {
-        if (t == elm) {
-          return true;
-        }
-        t = t.parentNode;
-      }
-      return false;
-    }
-  </script>
 </div>
+<script>
+  $(document).ready(function() {
+    $("#table")
+    .DataTable({
+      rowReorder: {
+                selector: "td:nth-child(2)"
+            },
+            responsive: true,
+            procesing: true,
+            // serverSide: true,
+            retrieve: true,
+            dom: "Bfrtip",
+            lengthChange: false,
+            lengthMenu: [
+                [10, 25, 50, -1],
+                ["10 rows", "25 rows", "50 rows", "Show all"]
+            ],
+            buttons: {
+                dom: {
+                    button: {
+                        tag: "button",
+                        className: "bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
+                    }
+                },
+                buttons: [
+                    {
+                        extend: "pageLength",
+                        className: "mr-2",
+                        titleAttr: "Sort"
+                    },
+                    {
+                        extend: "excel",
+                        className: "btn btn-sm btn-success mr-2",
+                        titleAttr: "Excel export.",
+                        text: "Export Excel",
+                        filename: "excel-export",
+                        extension: ".xlsx"
+                    },
+                ]
+            },
+    })
+    .columns.adjust()
+    .responsive.recalc();
+  } )
+  ;
+
+</script>
