--- a/views/layouts/page.ejs
+++ b/views/layouts/page.ejs
@@ -14,31 +14,19 @@
     <div class="w-1/2 pr-0">
       <div class="flex relative inline-block float-right">
         <div class="relative text-sm text-gray-100">
-          <button
+          <form action="/login/logout" method="POST">
+            <button
             id="userButton"
             class="flex items-center focus:outline-none mr-3 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4"
-          >
-          <i class="fas fa-sign-out-alt"></i>
+            >
+            <i class="fas fa-sign-out-alt"></i> Keluar
           </button>
+        </form>
           <div
             id="userMenu"
             class="bg-gray-900 rounded shadow-md mt-2 absolute mt-12 top-0 right-0 min-w-full overflow-auto z-30 invisible"
           >
-            <ul class="list-reset">
-              <li>
-                <a
-                  href="#"
-                  class="px-4 py-2 block text-gray-100 hover:bg-gray-800 no-underline hover:no-underline"
-                  >My account</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="px-4 py-2 block text-gray-100 hover:bg-gray-800 no-underline hover:no-underline"
-                  >Notifications</a
-                >
-              </li>
+            <!-- <ul class="list-reset">
               <li><hr class="border-t mx-2 border-gray-400" /></li>
               <li>
                 <a
@@ -47,25 +35,10 @@
                   >Logout</a
                 >
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
 
-        <div class="block lg:hidden pr-4">
-          <button
-            id="nav-toggle"
-            class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-100 hover:border-teal-500 appearance-none focus:outline-none"
-          >
-            <svg
-              class="fill-current h-3 w-3"
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Menu</title>
-              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-            </svg>
-          </button>
-        </div>
       </div>
     </div>
 
@@ -77,15 +50,17 @@
         <li class="mr-6 my-2 md:my-0">
           <a
             href="/dashboard"
-            class="block py-1 md:py-3 pl-1 align-middle text-blue-400 no-underline hover:text-gray-100 border-b-2 border-blue-400 hover:border-blue-400"
+            id="dashboard"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-pink-400"
           >
-            <i class="fas fa-home fa-fw mr-3 text-blue-400"></i
-            ><span class="pb-1 md:pb-0 text-sm">Home</span>
+            <i class="fas fa-home fa-fw mr-3"></i
+            ><span class="pb-1 md:pb-0 text-sm">Dashboard</span>
           </a>
         </li>
         <li class="mr-6 my-2 md:my-0">
           <a
-            href="/calon"
+            href="/calon"'
+            id="calon"
             class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-pink-400"
           >
             <i class="fas fa-tasks fa-fw mr-3"></i
@@ -94,11 +69,12 @@
         </li>
         <li class="mr-6 my-2 md:my-0">
           <a
-            href="#"
-            class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-purple-400"
+            href="/penilaian"
+            id="penilaian"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-pink-400"
           >
-            <i class="fa fa-envelope fa-fw mr-3"></i
-            ><span class="pb-1 md:pb-0 text-sm">Pemilihan</span>
+            <i class="fa fa-file-alt fa-fw mr-3"></i
+            ><span class="pb-1 md:pb-0 text-sm">Penilaian</span>
           </a>
         </li>
       </ul>
@@ -107,3 +83,21 @@
     </div>
   </div>
 </nav>
+
+<script>
+  const tagA = $("a");
+  const url = window.location.pathname;
+
+  if (url == "/calon") {
+    $("#calon").removeClass("");
+    $("#calon").addClass("block py-1 md:py-3 pl-1 align-middle text-blue-400 no-underline hover:text-gray-100 border-b-2 border-blue-400 hover:border-blue-400");
+  }
+  if (url == "/dashboard") {
+    $("#dashboard").removeClass("");
+    $("#dashboard").addClass("block py-1 md:py-3 pl-1 align-middle text-blue-400 no-underline hover:text-gray-100 border-b-2 border-blue-400 hover:border-blue-400");
+  }
+  if (url == "/penilaian") {
+    $("#penilaian").removeClass("");
+    $("#penilaian").addClass("block py-1 md:py-3 pl-1 align-middle text-blue-400 no-underline hover:text-gray-100 border-b-2 border-blue-400 hover:border-blue-400");
+  }
+</script>
