--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
 
   <body class="bg-gray-300" style="font-family: Roboto">
     <div class="w-full h-screen flex items-center justify-center">
-        <form class="w-full md:w-1/3 bg-white rounded-lg">
+        <form class="w-full md:w-1/3 bg-white rounded-lg" action="/login" method="POST">
             <div class="flex font-bold justify-center mt-6">
                 <img class="h-20 w-20"
                     src="https://raw.githubusercontent.com/sefyudem/Responsive-Login-Form/master/img/avatar.svg">
@@ -26,20 +26,26 @@
                 <div class="w-full mb-2">
                     <div class="flex items-center">
                         <i class='ml-3 fill-current text-gray-400 text-xs z-10 fas fa-user'></i>
-                        <input type='text' placeholder="Username"
+                        <input type='text' placeholder="Username" name="username" required
                             class="-mx-6 px-8  w-full border rounded px-3 py-5 text-gray-700 focus:outline-none" />
                     </div>
                 </div>
                 <div class="w-full mb-2">
                     <div class="flex items-center">
                         <i class='ml-3 fill-current text-gray-400 text-xs z-10 fas fa-lock'></i>
-                        <input type='text' placeholder="Password"
+                        <input type='password' placeholder="Password" name="password" required
                             class="-mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none" />
                     </div>
                 </div>
                 <button type="submit"
                     class="w-full py-5 rounded-full bg-blue-600 text-gray-100  focus:outline-none hover:bg-green-700">Masuk</button>
         </form>
-    </div>
+        
+        <% if (messages.error) { %>
+          <div class="mt-4 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+            <strong class="font-bold">User Name Dan Password Salah !!</strong>
+          </div>
+        <%} %>
+      </div>
   </body>
 </html>
