--- a/views/penilaian.ejs
+++ b/views/penilaian.ejs
@@ -26,12 +26,29 @@
         </div>
       </div>
 
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <select name="id" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Jenjang Pendidikan</option>
+              <option id="S2" value="S2">S2</option>
+              <option id="S3" value="S3">S3</option>
+          </select>
+        </div>
+      </div>
+      
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <input type="number" min="3" max="4" step="0.1" required placeholder="IPK" name="ipk" class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none" />
+        </div>
+      </div>
+
       <% for(let i=0; i < forms.length ; i++) { const form = forms[i]%>
       <div class="w-full mb-8">
         <div class="flex items-center">
           <input
             type="number"
-            min="1"
+            min="3"
             max="10"
             step="0.1"
             required
