--- a/views/penilaian.ejs
+++ b/views/penilaian.ejs
@@ -28,7 +28,7 @@
 
       <div class="w-full mb-8">
         <div class="flex items-center">
-          <select name="id" required
+          <select name="pendidikan" required
             class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
             <option disabled selected value>Jenjang Pendidikan</option>
               <option id="S2" value="S2">S2</option>
