--- a/views/rumus.ejs
+++ b/views/rumus.ejs
@@ -100,15 +100,15 @@
         </div>
         <div class="flex-1">
             <div>Rule 3</div>
-            <div>$$Z3 = <%=tampilRumus.r.r3%>\times 2 \times 2.1 = <%=tampilRumus.z.z3%>$$</div>
+            <div>$$Z3 = <%=tampilRumus.r.r3%>\times 2 + 2.1 = <%=tampilRumus.z.z3%>$$</div>
         </div>
         <div class="flex-1">
             <div>Rule 4</div>
-            <div>$$Z4 = <%=tampilRumus.r.r4%>\times 2 \times 4 = <%=tampilRumus.z.z4%>$$</div>
+            <div>$$Z4 = <%=tampilRumus.r.r4%>\times 2 + 4 = <%=tampilRumus.z.z4%>$$</div>
         </div>
         <div class="flex-1">
             <div>Rule 5</div>
-            <div>$$Z5 = <%=tampilRumus.r.r5%>\times 2 \times 6 = <%=tampilRumus.z.z5%>$$</div>
+            <div>$$Z5 = <%=tampilRumus.r.r5%>\times 2 + 6 = <%=tampilRumus.z.z5%>$$</div>
         </div>
     </div>
     <div class="text-3xl">Defuzzifikasi</div>
