--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -146,7 +146,7 @@
             <th>Publikasi Dalam Karya Ilmiah</th>
             <th>Kecakapan Dalam Memberikan Materi Perkuliahan</th>
             <th>Memiliki Sertifikat Keahlian</th>
-            <th>Nilai Test Psikologi</th>
+            <th>Nilai toefl</th>
             <th>Nilai Dari Seleksi Kompetensi</th>
             <th>Nilai Dari Test Kesehatan</th>
             <th>Kemampuan Berinteraksi</th>
@@ -167,9 +167,9 @@
             <td><%= data.ipk %></td>
             <td><%= data.mengajar %></td>
             <td><%= data.karyaIlmiah %></td>
-            <td><%= data.keahlian %></td>
+            <td><%= data.materi %></td>
             <td><%= data.sertifikat %></td>
-            <td><%= data.psikologi %></td>
+            <td><%= data.toefl %></td>
             <td><%= data.kompetensi %></td>
             <td><%= data.kesehatan %></td>
             <td><%= data.berinteraksi %></td>
