--- a/views/rumus.ejs
+++ b/views/rumus.ejs
@@ -52,10 +52,10 @@
             <span>Kurang $$<%=tampilRumus.datas.karyaIlmiah.kurang.string%> = <%=tampilRumus.datas.karyaIlmiah.kurang.data%>$$</span>
         </div>
         <div>
-            <div>Keahlian</div>
-            <span>Baik $$<%=tampilRumus.datas.keahlian.baik.string%> = <%=tampilRumus.datas.keahlian.baik.data%>$$</span>
-            <span>Sedang $$<%=tampilRumus.datas.keahlian.sedang.string%> = <%=tampilRumus.datas.keahlian.sedang.data%>$$</span>
-            <span>Kurang $$<%=tampilRumus.datas.keahlian.kurang.string%> = <%=tampilRumus.datas.keahlian.kurang.data%>$$</span>
+            <div>materi</div>
+            <span>Baik $$<%=tampilRumus.datas.materi.baik.string%> = <%=tampilRumus.datas.materi.baik.data%>$$</span>
+            <span>Sedang $$<%=tampilRumus.datas.materi.sedang.string%> = <%=tampilRumus.datas.materi.sedang.data%>$$</span>
+            <span>Kurang $$<%=tampilRumus.datas.materi.kurang.string%> = <%=tampilRumus.datas.materi.kurang.data%>$$</span>
         </div>
         <div>
             <div>Sertifikat</div>
@@ -64,10 +64,10 @@
             <span>Kurang $$<%=tampilRumus.datas.sertifikat.kurang.string%> = <%=tampilRumus.datas.sertifikat.kurang.data%>$$</span>
         </div>
         <div>
-            <div>Psikologi</div>
-            <span>Baik $$<%=tampilRumus.datas.psikologi.baik.string%> = <%=tampilRumus.datas.psikologi.baik.data%>$$</span>
-            <span>Sedang $$<%=tampilRumus.datas.psikologi.sedang.string%> = <%=tampilRumus.datas.psikologi.sedang.data%>$$</span>
-            <span>Kurang $$<%=tampilRumus.datas.psikologi.kurang.string%> = <%=tampilRumus.datas.psikologi.kurang.data%>$$</span>
+            <div>toefl</div>
+            <span>Baik $$<%=tampilRumus.datas.toefl.baik.string%> = <%=tampilRumus.datas.toefl.baik.data%>$$</span>
+            <span>Sedang $$<%=tampilRumus.datas.toefl.sedang.string%> = <%=tampilRumus.datas.toefl.sedang.data%>$$</span>
+            <span>Kurang $$<%=tampilRumus.datas.toefl.kurang.string%> = <%=tampilRumus.datas.toefl.kurang.data%>$$</span>
         </div>
         <div>
             <div>Kompetensi</div>
