--- a/views/penilaian.ejs
+++ b/views/penilaian.ejs
@@ -43,22 +43,95 @@
         </div>
       </div>
 
-      <% for(let i=0; i < forms.length ; i++) { const form = forms[i]%>
       <div class="w-full mb-8">
         <div class="flex items-center">
-          <input
-            type="number"
-            min="3"
-            max="10"
-            step="0.1"
-            required
-            placeholder="<%= form.placeholder  %>"
-            name="<%= form.name %>"
-            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none"
-          />
+          <select name="mengajar" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Pengalaman Mengajar</option>
+              <option value=1>Kurang Dari 6 Bulan</option>
+              <option value=2>6 Bulan Sampai 1.5 Tahun</option>
+              <option value=3>Lebih dari 2 Tahun</option>
+          </select>
         </div>
       </div>
-      <% } %>
+
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <select name="karyaIlmiah" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Memiliki Publikasi Dalam Karya Ilmiah</option>
+              <option value=1>Tidak Ada</option>
+              <option value=2>Sedikit</option>
+              <option value=3>Banyak</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <select name="materi" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Kecakapan Dalam Memberikan Materi Perkuliahan</option>
+              <option value=1>Kurang Baik</option>
+              <option value=2>Cukup</option>
+              <option value=3>Baik</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <select name="sertifikat" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Memiliki Sertifikat Keahlian</option>
+              <option value=1>Tidak Linier</option>
+              <option value=2>Linier</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <select name="toefl" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Nilai toefl</option>
+              <option value=1>Kurang dari 100</option>
+              <option value=2>100 Sampai 200</option>
+              <option value=3>lebih dari 200</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <input type="number" min="3" max="10" step="0.1" required placeholder="Nilai Dari Seleksi Kompetensi" name="kompetensi" class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none" />
+        </div>
+      </div>
+
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <select name="kesehatan" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Nilai Dari Test Kesehatan</option>
+              <option value="1">Kurang Baik</option>
+              <option value="2">Cukup</option>
+              <option value="3">Baik</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="w-full mb-8">
+        <div class="flex items-center">
+          <select name="berinteraksi" required
+            class="focus:ring-2 focus:ring-yellow-600 mx-6 px-8 w-full border rounded px-3 py-5 text-gray-700 focus:outline-none">
+            <option disabled selected value>Kemampuan Berinteraksi</option>
+              <option value="1">Kurang Baik</option>
+              <option value="2">Cukup</option>
+              <option value="3">Baik</option>
+          </select>
+        </div>
+      </div>
+
     </div>
     <button
       type="submit"
