--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,7 @@
           <div class="flex-1 text-right md:text-center">
             <h5 class="font-bold uppercase text-gray-400">Total Calon</h5>
             <h3 class="font-bold text-3xl text-gray-600">
-              <%= total%> Calon
+              <%= calons.length%> Calon
               <span class="text-green-500">
                 <i class="fas fa-exchange-alt"></i
               ></span>
